ingress/ingress-modified.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-rules
  namespace: default
spec:
  ingressClassName: nginx-class
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend1service
            port:
              number: 80
        path: /httpd
        pathType: Exact
      - backend:
          service:
            name: frontend2service
            port:
              number: 80
        path: /nginx
        pathType: Exact
